initial development of routing integration
